* Turn computer/mswmifilter into settings/mswmifilter (Bug #33936)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47407 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-24) unstable; urgency=medium
+
+  * Turn computer/mswmifilter into settings/mswmifilter (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 21:29:03 +0100
+
 univention-s4-connector (8.0.33-23) unstable; urgency=medium
 
   * Sync WMI filters and links to UCS
