--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,6 +1,6 @@
 univention-s4-connector (8.0.33-24) unstable; urgency=medium
 
-  * Turn computer/mswmifilter into settings/mswmifilter (Bug #33936)
+  * Turn container/mswmifilter into settings/mswmifilter (Bug #33936)
 
  -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 21:29:03 +0100
 
