--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (7.0.33-5) unstable; urgency=medium
+
+  * Turn container/mswmifilter into settings/mswmifilter (Bug #33956)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 21:41:32 +0100
+
 univention-s4-connector (7.0.33-4) unstable; urgency=medium
 
   * Sync WMI filters and links to UCS
