* 53_samba-common/60_local_config: Added a test case to check   samba.local.config.py (Bug #28722)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47412 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-26) unstable; urgency=low
+
+  * 53_samba-common/60_local_config: Added a test case to check
+    samba.local.config.py (Bug #28722)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 24 Jan 2014 08:35:12 +0100
+
 ucs-test (4.0.161-25) unstable; urgency=low
 
   * 00_base/96rename_domain_admins: ignore some
