* Bug #33493: add branding scope to fallback translations
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47414 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-14) unstable; urgency=low
+
+  * Bug #33493: add branding scope to fallback translations
+
+ -- Florian Best <best@univention.de>  Fri, 24 Jan 2014 08:57:27 +0100
+
 univention-management-console-frontend (3.0.152-13) unstable; urgency=low
 
   * Bug #32655: fix host dropdown design in Internet Explorer and Firefox
