* Bug #33493: remove language scopes from JS files, they are defined through umc/i18n.js
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47430 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-15) unstable; urgency=low
+
+  * Bug #33493: remove language scopes from JS files, they are defined through
+  	umc/i18n.js
+
+ -- Florian Best <best@univention.de>  Fri, 24 Jan 2014 15:39:40 +0100
+
 univention-management-console-frontend (3.0.152-14) unstable; urgency=low
 
   * Bug #33493: add branding scope to fallback translations
