--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (7.0.33-6) unstable; urgency=medium
+
+  * add --write2samba4 code to upgrade_msWMI-Som.py (Bug #33956)
+
+ -- Arvid Requate <requate@univention.de>  Fri, 24 Jan 2014 17:02:19 +0100
+
 univention-s4-connector (7.0.33-5) unstable; urgency=medium
 
   * Turn container/mswmifilter into settings/mswmifilter (Bug #33956)
