* 95rename_administrator: create a temporary domain admin otherwise we   are unable to use Administrator since he was renamed (Bug #33897)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47442 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-28) unstable; urgency=low
+
+  * 95rename_administrator: create a temporary domain admin otherwise we
+    are unable to use Administrator since he was renamed (Bug #33897)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Sat, 25 Jan 2014 13:07:09 +0100
+
 ucs-test (4.0.161-27) unstable; urgency=low
 
   * 68univention-admingrp-user-passwordreset-protected-group: Force LDAP
