* Bug #32655: reverted changes from r47379 for next erratum
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47444 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.153-1) unstable; urgency=low
+
+  * Bug #32655: reverted changes from r47379 for next erratum
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 27 Jan 2014 10:26:58 +0100
+
 univention-management-console-frontend (3.0.152-15) unstable; urgency=low
 
   * Bug #33493: remove language scopes from JS files, they are defined through
