* Bug #33329: Revert whitespace fix
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47447 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-14) unstable; urgency=low
+
+  * Bug #33329: Revert whitespace fix
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 27 Jan 2014 12:14:43 +0100
+
 univention-directory-manager-modules (9.0.75-13) unstable; urgency=low
 
   * Bug #33703: Fixed setting and displaying of users' sambaLogonHours
