* Bug #33329: Refactor setting first nonemtpy value
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47448 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/umc/js/de.po
+++ b/management/univention-management-console-module-udm/umc/js/de.po
@@ -832,7 +832,7 @@ msgstr "Das übergeordnete Objekt, für welches die Suche ausgeführt wird."
 
 #: umc/js/udm.js:555
 msgid "The type of the LDAP object."
-msgstr "Der Type des LDAP-Objekts."
+msgstr "Der Typ des LDAP-Objekts."
 
 #: umc/js/udm.js:1212 umc/js/udm.js:1225
 msgid "Type"
