--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.97-17) unstable; urgency=low
+
+  * Bug #33329: Refactor setting first nonemtpy value
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 27 Jan 2014 13:01:06 +0100
+
 univention-management-console-module-udm (4.0.97-16) unstable; urgency=low
 
   * Bug #33554: fix typo
