--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (7.0.0-9) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #32571).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Mon, 27 Jan 2014 14:07:25 +0100
+
 univention-kernel-image (7.0.0-8) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #32203).
