* 00_base/95rename_administrator: Check slapd.conf on DC Master only   (Bug #33897)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47453 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-30) unstable; urgency=low
+
+  * 00_base/95rename_administrator: Check slapd.conf on DC Master only
+    (Bug #33897)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 27 Jan 2014 16:56:59 +0100
+
 ucs-test (4.0.161-29) unstable; urgency=low
 
   * 68univention-admingrp-user-passwordreset-protected-groups: run the
