* Fix errata versioning (Bug #33937)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47459 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,10 +1,16 @@
-univention-ldap (9.0.29-1) unstable; urgency=medium
+univention-ldap (9.0.27-8) unstable; urgency=medium
+
+  * Fix errata versioning (Bug #33937)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Jan 2014 11:58:10 +0100
+
+univention-ldap (9.0.27-7) unstable; urgency=medium
 
   * Bump version (Bug #33937)
 
  -- Arvid Requate <requate@univention.de>  Mon, 20 Jan 2014 18:18:58 +0100
 
-univention-ldap (9.0.28-1) unstable; urgency=medium
+univention-ldap (9.0.27-6) unstable; urgency=medium
 
   * Add mswmi.schema (Bug #33937)
   * Add msGPOWQLFilter to msgpo.schema
