--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-27) unstable; urgency=medium
+
+  * WMI filter: Fix case of initial installation on first UCS@school DC
+  * Improved robustness of update installation (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Jan 2014 12:16:02 +0100
+
 univention-s4-connector (8.0.33-26) unstable; urgency=medium
 
   * add --write2samba4 code to upgrade_msWMI-Som.py (Bug #33936)
