--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-28) unstable; urgency=medium
+
+  * Fix syntax (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Jan 2014 12:17:54 +0100
+
 univention-s4-connector (8.0.33-27) unstable; urgency=medium
 
   * WMI filter: Fix case of initial installation on first UCS@school DC
