--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-29) unstable; urgency=medium
+
+  * Raise timout limits for initial listener replication and restart
+    (Bug #33644)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 28 Jan 2014 17:31:13 +0100
+
 univention-s4-connector (8.0.33-28) unstable; urgency=medium
 
   * Fix syntax (Bug #33936)
