--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (7.0.33-8) unstable; urgency=medium
+
+  * WMI filter: Fix case of initial installation on first UCS@school DC
+   (Bug #33956)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 29 Jan 2014 11:33:12 +0100
+
 univention-s4-connector (7.0.33-7) unstable; urgency=medium
 
   * WMI filter: Fix case of initial installation on first UCS@school DC        
