* log test description description (Bug #32422)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47511 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,6 +1,12 @@
-ucs-test (4.0.161-31) unstable; urgency=medium
+ucs-test (4.0.161-32) unstable; urgency=medium
 
   * log test section description (Bug #32422)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 29 Jan 2014 18:16:35 +0100
+
+ucs-test (4.0.161-31) unstable; urgency=medium
+
+  * log test description description (Bug #32422)
 
  -- Arvid Requate <requate@univention.de>  Wed, 29 Jan 2014 15:47:29 +0100
 
