Bug #33816: ucs-test/09/47: Only use test component
Only check the URL of the artificial test repository for accessibility
(and not the password-protected UCS-3.2 errata preview repository)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47512 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-33) unstable; urgency=low
+
+  * 09/47: Only use test component (Bug #33816)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 29 Jan 2014 17:33:00 +0100
+
 ucs-test (4.0.161-32) unstable; urgency=medium
 
   * log test section description (Bug #32422)
