* Bug #33622: fix crashing of UMC when sending a malformed, empty or chunked UMCP body
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47517 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.24-2) unstable; urgency=low
+
+  * Bug #33622: fix crashing of UMC when sending a malformed, empty or chunked UMCP
+  	body
+
+ -- Florian Best <best@univention.de>  Thu, 30 Jan 2014 09:58:09 +0100
+
 univention-management-console (6.0.24-1) unstable; urgency=low
 
   * Bug #33673: let module process stop when initialization fails, don't
