--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (3.0.17-4) unstable; urgency=low
+
+  * Update UVMMd to use internal libvirt eventloop. This fixes a problem
+    with accumulating open file handles (Bug #33458) 
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 30 Jan 2014 11:06:51 +0100
+
 univention-virtual-machine-manager-daemon (3.0.17-3) unstable; urgency=low
 
   * Fix check-script to restart UVMMd instead of libvird (Bug #33741)
