--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-34) unstable; urgency=medium
+
+  * Re-enable 10_ldap/61getent_crash to analyse Bug #33904
+
+ -- Arvid Requate <requate@univention.de>  Thu, 30 Jan 2014 14:14:12 +0100
+
 ucs-test (4.0.161-33) unstable; urgency=low
 
   * 09/47: Only use test component (Bug #33816)
