--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.15-1) unstable; urgency=medium
+
+  * Raise samba/debug/level on s4 backup and s4 slave for Bug #33904
+
+ -- Arvid Requate <requate@univention.de>  Thu, 30 Jan 2014 14:37:18 +0100
+
 ucs-ec2-tools (0.1.14-1) unstable; urgency=low
 
   * Re-enable UCR cron jobs on test VMs (Bug #31773)
