--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-16) unstable; urgency=medium
+
+  * Terminate option parsing in samba-tool user add call (Bug #32938)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 30 Jan 2014 15:20:15 +0100
+
 univention-samba4 (3.0.39-15) unstable; urgency=medium
 
   * During join call sysvol-sync with --overwrite-local except on primary DC
