--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-35) unstable; urgency=low
+
+  * Fix JUnit output format (Bug #34014)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 29 Jan 2014 17:33:00 +0100
+
 ucs-test (4.0.161-34) unstable; urgency=medium
 
   * Re-enable 10_ldap/61getent_crash to analyse Bug #33904
