* Make 05domain-join-ntlm-auth work on memberservers and in Samba4   (Bug #32379)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47542 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-36) unstable; urgency=medium
+
+  * Make 05domain-join-ntlm-auth work on memberservers and in Samba4
+    (Bug #32379)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 30 Jan 2014 17:07:43 +0100
+
 ucs-test (4.0.161-35) unstable; urgency=low
 
   * Fix JUnit output format (Bug #34014)
