--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-37) unstable; urgency=medium
+
+  * Let 50_samba/41password_change run on memberservers (Bug #32382)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 30 Jan 2014 17:32:13 +0100
+
 ucs-test (4.0.161-36) unstable; urgency=medium
 
   * Make 05domain-join-ntlm-auth work on memberservers and in Samba4
