* Bug #33703: Fixed setting and displaying of users' sambaLogonHours
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47550 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (8.0.143-33) unstable; urgency=low
+
+  * Bug #33703: Fixed setting and displaying of users' sambaLogonHours
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 31 Jan 2014 10:38:33 +0100
+
 univention-directory-manager-modules (8.0.143-32) unstable; urgency=low
 
   * Fixed german translation for unable to move (Bug #33566)
