* Bug #33703: Fixed MultiSelect widget setting its values too early breaking page rendering
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47551 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (2.0.244-19) unstable; urgency=low
+
+  * Bug #33703: Fixed MultiSelect widget setting its values too early
+    breaking page rendering
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 31 Jan 2014 10:40:41 +0100
+
 univention-management-console-frontend (2.0.244-18) unstable; urgency=low
 
   * Bug #31898: Fix problems in LoginDialog when changing expired password.
