Bug #33164: UVMM: Set title on noVNC to VM name and host
Set the tab/window title to the name of the VM and the name of the host.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47554 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.17-5) unstable; urgency=low
+
+  * Set title on noVNC to VM name and host (Bug #33164)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 04 Dec 2013 08:44:56 +0100
+
 univention-virtual-machine-manager-daemon (3.0.17-4) unstable; urgency=low
 
   * Update UVMMd to use internal libvirt eventloop. This fixes a problem
