* Update UVMMd to use internal libvirt eventloop. This fixes a problem with accumulating open file handles (Bug #34020)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47555 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (2.0.36-12) unstable; urgency=low
+
+  * Update UVMMd to use internal libvirt eventloop. This fixes a problem
+    with accumulating open file handles (Bug #34020) 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 31 Jan 2014 11:19:56 +0100
+
 univention-virtual-machine-manager-daemon (2.0.36-11) unstable; urgency=low
 
   * Prevent snapshots of suspended VMs (Bug #23436)
