--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-18) unstable; urgency=low
+
+  * Bug #32655: fix host dropdown design
+
+ -- Florian Best <best@univention.de>  Fri, 31 Jan 2014 14:53:35 +0100
+
 univention-management-console-frontend (3.0.152-17) unstable; urgency=low
 
   * Bug #33493: ignore empty scopes
