--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,6 +1,6 @@
 univention-management-console-frontend (3.0.152-18) unstable; urgency=low
 
-  * Bug #32655: fix host dropdown design
+  * Bug #32655: fix host dropdown design and alignment
 
  -- Florian Best <best@univention.de>  Fri, 31 Jan 2014 14:53:35 +0100
 
