* Bug #34028: When doing an update of an application a hint is shown saying that all packages will be upgraded. If this is not intended one would have to go to the repository settings tab. This tab is not present when updating the application via its dedicated UMC module. Now the text contains a link and it opens the App Center if it was not already open and switches to the repository tab. * Bug #30019: Some code cleanup
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47566 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,15 @@
+univention-management-console-module-appcenter (3.0.50-19) unstable; urgency=low
+
+  * Bug #34028: When doing an update of an application a hint is shown saying
+    that all packages will be upgraded. If this is not intended one would have
+    to go to the repository settings tab. This tab is not present when
+    updating the application via its dedicated UMC module. Now the text
+    contains a link and it opens the App Center if it was not already open and
+    switches to the repository tab.
+  * Bug #30019: Some code cleanup
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 31 Jan 2014 13:55:17 +0100
+
 univention-management-console-module-appcenter (3.0.50-18) unstable; urgency=low
 
   * Bug #33947: Applications extending the LDAP schema added repositories on
