--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-19) unstable; urgency=low
+
+  * Bug #31855: Support UMC modules that may be opened only once at the same
+    time
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 03 Feb 2014 12:17:59 +0100
+
 univention-management-console-frontend (3.0.152-18) unstable; urgency=low
 
   * Bug #32655: fix host dropdown design and alignment
