* WMI filter: Bump joinscript-version for upgrades from ucs_3.1-1 to   register the LDAP Schema and module extension (Bug #33936)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47611 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-31) unstable; urgency=medium
+
+  * WMI filter: Bump joinscript-version for upgrades from ucs_3.1-1 to
+    register the LDAP Schema and module extension (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 04 Feb 2014 11:16:16 +0100
+
 univention-s4-connector (8.0.33-30) unstable; urgency=medium
 
   * WMI filter: Fix case of initial installation on first UCS@school DC
