* Bug #33622: also allow message header to be send in chunks
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47613 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-3) unstable; urgency=low
+
+  * Bug #33622: also allow message header to be send in chunks
+
+ -- Florian Best <best@univention.de>  Tue, 04 Feb 2014 12:46:54 +0100
+
 univention-management-console (6.0.24-2) unstable; urgency=low
 
   * Bug #33622: fix crashing of UMC when sending a malformed, empty or chunked UMCP
