--- a/management/univention-management-console/src/univention/management/console/de.po
+++ b/management/univention-management-console/src/univention/management/console/de.po
@@ -203,6 +203,10 @@ msgstr "Das Kommando '%s' hat keine Argumente"
 msgid "The message body is not (yet) complete"
 msgstr "Der Nachrichtenrumpf ist (noch) nicht vollständig"
 
+#: src/univention/management/console/protocol/message.py:199
+msgid "The message header is not (yet) complete"
+msgstr "Der Nachrichtenkopf ist (noch) nicht vollständig"
+
 #: src/univention/management/console/protocol/message.py:246
 msgid "error parsing UMCP message body"
 msgstr "Fehler beim Parsen des UMCP-Nachrichtenrumpfes"
