--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (8.0.17-2) unstable; urgency=medium
+
+  * Bug #33657: Point out the difference to Univention Ad Takeover
+    in the UMC wizzard header.
+
+ -- Arvid Requate <requate@univention.de>  Tue, 04 Feb 2014 13:41:39 +0100
+
 univention-ad-connector (8.0.17-1) unstable; urgency=low
 
   * Bug #32698: remove target="_blank"
