* Bug #33657: wording improved.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47617 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-3) unstable; urgency=medium
+
+  * Bug #33657: wording improved.
+
+ -- Arvid Requate <requate@univention.de>  Tue, 04 Feb 2014 14:29:29 +0100
+
 univention-ad-connector (8.0.17-2) unstable; urgency=medium
 
   * Bug #33657: Point out the difference to Univention Ad Takeover
