* Bug #31855: Check flavor when searching for unique modules
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47618 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-21) unstable; urgency=low
+
+  * Bug #31855: Check flavor when searching for unique modules
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 04 Feb 2014 14:41:23 +0100
+
 univention-management-console-frontend (3.0.152-20) unstable; urgency=low
 
   * Bug #32655: fiy typo
