--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.38-10) unstable; urgency=low
+
+  * Extend copyright to 2014.
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 04 Feb 2014 17:01:54 +0100
+
 univention-updater (9.0.38-9) unstable; urgency=low
 
   * Bug #33443: UMC Module: Reconnect after reboot
