Bug #33189: Updater: Fix evaluation of univentionUpdateActive
Only evaluate the --updateto argument when univentionUpdateActive is
TRUE.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47634 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,6 +1,7 @@
 univention-updater (9.0.38-10) unstable; urgency=low
 
   * Extend copyright to 2014.
+  * Fix evaluation of univentionUpdateActive by CRON job (Bug #33189)
 
  -- Philipp Hahn <hahn@univention.de>  Tue, 04 Feb 2014 17:01:54 +0100
 
