* Bug #33850: adapt error message of policy name syntax
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47638 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-15) unstable; urgency=low
+
+  * Bug #33850: adapt error message of policy name syntax
+
+ -- Florian Best <best@univention.de>  Wed, 05 Feb 2014 09:54:57 +0100
+
 univention-directory-manager-modules (9.0.75-14) unstable; urgency=low
 
   * Bug #33329: Revert whitespace fix
