* Update to Firefox 24.3 ESR (Bug #34052)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47641 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:24.3.0esr-6) unstable; urgency=low
+
+  * Update to Firefox 24.3 ESR (Bug #34052)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 05 Feb 2014 11:32:16 +0100
+
 firefox-en (1:24.2.0esr-6) unstable; urgency=low
 
   * Update to Firefox 24.2 ESR (Bug #33451)
