--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-appcenter (3.0.50-20) unstable; urgency=low
+
+  * Bug #33548: When querying during a release update of UCS, the target
+    version should be used to find all applications. This is done by reading
+    from the updater.status file.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 05 Feb 2014 12:39:07 +0100
+
 univention-management-console-module-appcenter (3.0.50-19) unstable; urgency=low
 
   * Bug #34028: When doing an update of an application a hint is shown saying
