* Increase the timeout to 1200 seconds while waiting for the EC2   instance (Bug #33841)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47676 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,10 @@
+ucs-ec2-tools (0.1.16-1) unstable; urgency=low
+
+  * Increase the timeout to 1200 seconds while waiting for the EC2
+    instance (Bug #33841)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 06 Feb 2014 20:13:02 +0100
+
 ucs-ec2-tools (0.1.15-1) unstable; urgency=medium
 
   * Raise samba/debug/level on s4 backup and s4 slave for Bug #33904
