univention-ssl (8.0.0-4) unstable; urgency=low
  * set correct permissions for "/etc/univention/ssl" on certificate renewal (Bug #31941)
  * set correct permissions when using "univention-certificate new" (Bug #31941)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47687 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,10 @@
+univention-ssl (8.0.0-4) unstable; urgency=low
+
+  * set correct permissions for "/etc/univention/ssl" on certificate renewal (Bug #31941)
+  * set correct permissions when using "univention-certificate new" (Bug #31941)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Fri, 07 Feb 2014 15:50:12 +0100
+
 univention-ssl (8.0.0-3) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30943)
